fixed no register componenet bug, hid overflow on selct

--- a/src/components/game/GameSelect.css
+++ b/src/components/game/GameSelect.css
@@ -1,4 +1,6 @@
-
+body{
+    overflow: hidden;
+}
 .selectHeader{
     font-size: 5rem;
     color:black;
